# tempo-cli

./: Cargo.toml  Makefile  README.md  rustfmt.toml
src/: client.rs  format.rs  main.rs  time.rs
src/commands/: get.rs  mod.rs  search.rs  tag_values.rs  tags.rs
