[package]
name = "tempo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tempo-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
humantime = "2"
colored = "2"
